# ctf-2023-infrastructure-old

./: .gitattributes  .gitignore  LICENSE.txt  README.md  Vagrantfile  challenge-machines.yaml  flagship-machine.yaml  generate-secrets.sh  initial.yaml  local-dns-server.sh  regenerate-secrets.sh  requirements.yaml  site.yaml
pyinfra/: config.py  pyproject.toml
pyinfra/deploys/: initial.py  site.py  update.py
pyinfra/files/base/: 10-vagrant-static.network.j2  80-wired.network  sudoers_management
pyinfra/files/common/: hidepid-systemd-logind-override.conf
pyinfra/group_data/: all.py  challenges.py  flagship.py  local.py  staging.py  vagrant.py
pyinfra/inventories/: local-vagrant-bootstrap.py  local-vagrant.py  staging.py
pyinfra/lib/: secrets.py  timezone.py  users.py
pyinfra/roles/: base.py  common.py
pyinfra/roles/base/: __init__.py  systemd_networkd.py
pyinfra/roles/base/files/: 10-static-staging.network.j2  10-static-vagrant.network.j2  10-vagrant-static.network.j2
pyinfra/roles/common/: __init__.py  configure_ssh.py  extra_packages.py  harden_ssh.py  harden_system.py  setup_firewall.py  setup_intnet.py
pyinfra/roles/common/files/: sshd_config  sysctl-hardening.conf
pyinfra/roles/ctfd/: __init__.py
pyinfra/roles/intnet/: __init__.py
pyinfra/roles/mariadb/: __init__.py
pyinfra/roles/netdata/: __init__.py  flagship.py
pyinfra/roles/nginx/: __init__.py
pyinfra/roles/redis/: __init__.py
pyinfra/roles/update/: __init__.py
pyinfra/util/: __init__.py  flags.py  kdf.py  paths.py  reactor.py  secrets.py  timezone.py  users.py
(+130 files in other folders)
