[tool.poetry]
name = "ctf-2023-pyinfra"
version = "0.1.0"
description = ""
authors = [
	"Thomas Bork <sudobash418@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
pyinfra = { git = "https://git.sb418.net/sudoBash418/pyinfra.git", branch = "unified-patches" }
attrs = "^22.1.0"
blake3 = "^0.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
rope = "^1.3.0"
isort = "^5.10.1"
ipython = "^8.5.0"

[tool.isort]
skip_gitignore = true
lines_after_imports = 2
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "PYINFRA", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["typing"]
known_typing = ["typing", "typing_extensions", "types"]
known_pyinfra = ["pyinfra", "pyinfra_cli"]
known_first_party = ["deploys", "roles", "util"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
